--- a/12209349- Rafi Ramadhan/LKPD_CSS/index_landingpage.html
+++ b/12209349- Rafi Ramadhan/LKPD_CSS/index_landingpage.html
@@ -70,8 +70,7 @@
           <div class="report-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio</p>
           </div>
-          <img class="report-image"
-          src="https://images.unsplash.com/photo-1580757468214-c73f7062a5cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8MTYlM0E5fGVufDB8fDB8fHww&w=1000&q=80" alt="Hero Image""
+          <img class="report-image" src="http://1.bp.blogspot.com/-bUTz-VYcgYs/UQZ4VFhxyVI/AAAAAAAAAO4/VYFd7bKcZlQ/s1600/Gambar+gambar+pemandangan+indah+5.jpg" alt="Hero Image""
           alt="Gambar Laporan 1" />
         </div>
 
@@ -79,9 +78,8 @@
           <div class="report-content">
             <p>Phasellus nisl erat, dignissim vel malesuada at, semper eget ex. Phasellus nisl erat, dignissim vel malesuada at, semper eget ex</p>
           </div>
-          <img class="report-image"
-          src="https://images.unsplash.com/photo-1580757468214-c73f7062a5cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8MTYlM0E5fGVufDB8fDB8fHww&w=1000&q=80" alt="Hero Image""
-          alt="Gambar Laporan 2" />
+          <img class="report-image" src="http://1.bp.blogspot.com/-bUTz-VYcgYs/UQZ4VFhxyVI/AAAAAAAAAO4/VYFd7bKcZlQ/s1600/Gambar+gambar+pemandangan+indah+5.jpg"" alt="Gambar Laporan
+          2" />
         </div>
       </div>
     </section>
